# bulk-sheet-editor

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs
src/ui_step_modules/: bulk_create.rs  bulk_creation.rs  csv_import.rs  mod.rs  odf_import.rs  odf_template.rs  shared_state.rs  test_ui_module.rs  worksheet_generation.rs
src/utils/: dialogs.rs
