[package]
name = "bulk-sheet-editor"
version = "0.0.2"
edition = "2024"

[dependencies]
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
eframe = { version= "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
env_logger = "0.11.5"
rfd = "0.17.1"
csv = "1.3.0"
calamine = "0.32.0"
zip = "0.6.6"
quick-xml = "0.31.0"
